# json-parser

./: .gitignore  CMakeLists.txt  CODEOWNERS  README.md
include/: json.h  json_adders.h  json_array.h  json_array_adders.h  json_array_getters.h  json_array_setters.h  json_getters.h  json_internal.h  json_setters.h  util.h
src/: CMakeLists.txt  json.c  json_adders.c  json_array.c  json_array_adders.c  json_array_getters.c  json_array_setters.c  json_getters.c  json_internal.c  json_setters.c
test/: CMakeLists.txt  complex_file.json  json_add_and_get.c  json_adders.c  json_array_append_types.c  json_array_getters_setters.c  json_array_set.c  json_array_to_and_from_file.c  json_bool.c  json_create.c  json_duplicate_key.c  json_empty_array.c  json_empty_objects.c  json_empty_strings.c  json_getters.c  json_missing_colon.c  json_missing_delimiter.c  json_null_values.c  json_numbers_in_key.c  json_numeric_whitespace.c  json_parse_1.c  json_parse_array.c  json_parse_array_arrays.c  json_parse_array_objects.c  json_parse_array_primitives.c  json_parse_from_file.c  json_parse_from_string_with_length.c  json_parse_string_1.c  json_parse_string_2.c  json_parse_string_nested.c  json_set_with_new_type.c  json_setters.c  json_string_whitespace.c  json_to_file.c  json_to_string.c  sample_file.json
