add_executable(json_create json_create.c)
target_include_directories(json_create PUBLIC ${json_SOURCE_DIR}/include)
target_link_libraries(json_create json)
add_test(NAME json_create COMMAND json_create)

add_executable(json_add_and_get json_add_and_get.c)
target_include_directories(json_add_and_get PUBLIC ${json_SOURCE_DIR}/include)
target_link_libraries(json_add_and_get json)
add_test(NAME json_add_and_get COMMAND json_add_and_get)

add_executable(json_parse_string_1 json_parse_string_1.c)
target_include_directories(json_parse_string_1 PUBLIC ${json_SOURCE_DIR}/include)
target_link_libraries(json_parse_string_1 json)
add_test(NAME json_parse_string_1 COMMAND json_parse_string_1)

add_executable(json_parse_string_2 json_parse_string_2.c)
target_include_directories(json_parse_string_2 PUBLIC ${json_SOURCE_DIR}/include)
target_link_libraries(json_parse_string_2 json)
add_test(NAME json_parse_string_2 COMMAND json_parse_string_2)

add_executable(json_parse_array_primitives json_parse_array_primitives.c)
target_include_directories(json_parse_array_primitives PUBLIC ${json_SOURCE_DIR}/include)
target_link_libraries(json_parse_array_primitives json)
add_test(NAME json_parse_array_primitives COMMAND json_parse_array_primitives)

add_executable(json_parse_array_objects json_parse_array_objects.c)
target_include_directories(json_parse_array_objects PUBLIC ${json_SOURCE_DIR}/include)
target_link_libraries(json_parse_array_objects json)
add_test(NAME json_parse_array_objects COMMAND json_parse_array_objects)

add_executable(json_parse_array_arrays json_parse_array_arrays.c)
target_include_directories(json_parse_array_arrays PUBLIC ${json_SOURCE_DIR}/include)
target_link_libraries(json_parse_array_arrays json)
add_test(NAME json_parse_array_arrays COMMAND json_parse_array_arrays)

add_executable(json_parse_string_nested json_parse_string_nested.c)
target_include_directories(json_parse_string_nested PUBLIC ${json_SOURCE_DIR}/include)
target_link_libraries(json_parse_string_nested json)
add_test(NAME json_parse_string_nested COMMAND json_parse_string_nested)

add_executable(json_numeric_whitespace json_numeric_whitespace.c)
target_include_directories(json_numeric_whitespace PUBLIC ${json_SOURCE_DIR}/include)
target_link_libraries(json_numeric_whitespace json)
add_test(NAME json_numeric_whitespace COMMAND json_numeric_whitespace)

add_executable(json_string_whitespace json_string_whitespace.c)
target_include_directories(json_string_whitespace PUBLIC ${json_SOURCE_DIR}/include)
target_link_libraries(json_string_whitespace json)
add_test(NAME json_string_whitespace COMMAND json_string_whitespace)

add_executable(json_missing_delimiter json_missing_delimiter.c)
target_include_directories(json_missing_delimiter PUBLIC ${json_SOURCE_DIR}/include)
target_link_libraries(json_missing_delimiter json)
add_test(NAME json_missing_delimiter COMMAND json_missing_delimiter)
